# rag-document-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
eval/: inspect_retrieval.py  questions.json  run_eval.py
src/rag_assistant/: __init__.py  api.py  config.py  ingestion.py  llm.py  pipeline.py  vectorstore.py
tests/: conftest.py  test_api.py  test_chunking.py  test_llm.py  test_vectorstore.py
