[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-document-assistant"
version = "0.1.0"
description = "Production-grade RAG assistant for medical, legal, and academic PDFs — FastAPI, ChromaDB, and Claude with grounded citations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rustam" }]
dependencies = [
    "anthropic>=0.50",
    "chromadb>=0.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pypdf>=4.0",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ui = ["streamlit>=1.35", "requests>=2.31"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4", "requests>=2.31"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: `Depends(...)` / `File(...)` in argument defaults is the FastAPI idiom
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
